k8s/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: nycad-app
  labels:
    app: nycad-frontend
spec:
  selector:
    app: nycad-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
